new layout footer etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-@if(showNavigation$ | async) {
+<!-- @if(showNavigation$ | async) {
 <app-navigation></app-navigation>
 }
 <router-outlet></router-outlet>
 @if(showFooter$ | async) {
 <app-footer></app-footer>
-}
+} -->
+<app-landing-layout></app-landing-layout>
