--- a/src/app/layout/landing-navigation/landing-navigation.component.html
+++ b/src/app/layout/landing-navigation/landing-navigation.component.html
@@ -10,7 +10,10 @@
 
     <div class="items-center hidden gap-4 lg:inline-flex">
       <a class="transition hover:text-custom-green" href="">Login</a>
-      <app-button-video [text]="'Start Learning'"></app-button-video>
+      <app-button-video
+        #videoButton
+        [text]="'Start Learning'"
+      ></app-button-video>
     </div>
 
     <!-- Burger Icon -->
