--- a/src/app/layout/landing-content/landing-content.component.html
+++ b/src/app/layout/landing-content/landing-content.component.html
@@ -17,7 +17,7 @@
 
       <div class="grid grid-cols-1 text-center mt-14 md:grid-cols-2 gap-7">
         <app-tile-video
-          [link]="'/landing/authoring-page.html'"
+          [link]="'/c4c/authoring'"
           [videoURL]="'/assets/videos/authoring-tool.mp4'"
           [heading]="'Authoring tool'"
           [paragraph]="'Content creation for instructors and institutions'"
@@ -29,6 +29,7 @@
           [paragraph]="
             'Adaptive Learning Path for Beginners and Advanced Learners'
           "
+          [borderColor]="'blue'"
         ></app-tile-video>
       </div>
     </div>
