--- a/src/app/layout/landing-layout/landing-layout.component.html
+++ b/src/app/layout/landing-layout/landing-layout.component.html
@@ -1,2 +1,2 @@
-<app-landing-navigation></app-landing-navigation>
-<app-landing-content></app-landing-content>
+<layout-landing-navigation></layout-landing-navigation>
+<layout-landing-content></layout-landing-content>
