landing equal tiles

--- a/src/app/layout/landing-content/landing-content.component.html
+++ b/src/app/layout/landing-content/landing-content.component.html
@@ -16,13 +16,13 @@
       </div>
 
       <div class="grid grid-cols-1 text-center mt-14 md:grid-cols-2 gap-7">
-        <app-tile-video
+        <ui-tile-video
           [link]="'/c4c/authoring'"
           [videoURL]="'/assets/videos/authoring-tool.mp4'"
           [heading]="'Authoring tool'"
           [paragraph]="'Content creation for instructors and institutions'"
-        ></app-tile-video>
-        <app-tile-video
+        ></ui-tile-video>
+        <ui-tile-video
           [link]="'/landing/learn-js-python-page.html'"
           [videoURL]="'/assets/videos/learn.mp4'"
           [heading]="'Learn Javascript + Python'"
@@ -30,7 +30,7 @@
             'Adaptive Learning Path for Beginners and Advanced Learners'
           "
           [borderColor]="'blue'"
-        ></app-tile-video>
+        ></ui-tile-video>
       </div>
     </div>
   </section>
