--- a/src/app/layout/landing-navigation/landing-navigation.component.html
+++ b/src/app/layout/landing-navigation/landing-navigation.component.html
@@ -15,10 +15,10 @@
       <app-button-video #videoButton [text]="'Learn more'"></app-button-video>
     </div>
 
-    <div class="inline-flex items-center gap-3 lg:hidden">
+    <!-- <div class="inline-flex items-center gap-3 lg:hidden">
       <app-burger-icon></app-burger-icon>
-    </div>
+    </div> -->
 
-    <app-landing-navigation-mobile></app-landing-navigation-mobile>
+    <!-- <app-landing-navigation-mobile></app-landing-navigation-mobile> -->
   </div>
 </nav>
