layout top links pages

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -20,6 +20,7 @@
     <!-- Footer Copyrights -->
     <div class="flex flex-wrap justify-between gap-2">
       <div class="flex flex-wrap items-center gap-2">
+        <p class="mb-0">© 2023 C4C</p>
         <ul class="inline-flex flex-wrap gap-5 mb-0 list-none">
           <li class="mb-0">
             <a href="" class="transition hover:text-custom-green"
@@ -40,15 +41,6 @@
             >
           </li>
         </ul>
-        <p class="mb-0">
-          Copyright © 2023 C4C. All Rights Reserved. Proudly Developed by
-          <a
-            href="https://pixelactions.com/"
-            target="_blank"
-            class="transition hover:text-custom-green"
-            >Pixel Actions</a
-          >
-        </p>
       </div>
       <div class="flex items-center gap-6">
         <a href="https://www.facebook.com/" target="_blank" class="group">
