--- a/src/app/layout/landing-content/landing-content.component.html
+++ b/src/app/layout/landing-content/landing-content.component.html
@@ -23,7 +23,7 @@
           [paragraph]="'Content creation for instructors and institutions'"
         ></ui-tile-video>
         <ui-tile-video
-          [link]="'/landing/learn-js-python-page.html'"
+          [link]="'/c4c/learning'"
           [videoURL]="'/assets/videos/learn.mp4'"
           [heading]="'Learn Javascript + Python'"
           [paragraph]="
