--- a/src/app/layout/landing-layout/landing-layout.component.html
+++ b/src/app/layout/landing-layout/landing-layout.component.html
@@ -1,2 +1,3 @@
 <layout-landing-navigation></layout-landing-navigation>
 <layout-landing-content></layout-landing-content>
+<layout-footer></layout-footer>
