--- a/src/app/layout/landing-content/landing-content.component.html
+++ b/src/app/layout/landing-content/landing-content.component.html
@@ -32,6 +32,10 @@
           [borderColor]="'blue'"
         ></ui-tile-video>
       </div>
+
+      <div class="mt-8 text-center">
+        <app-button-video [text]="'Lean More'"></app-button-video>
+      </div>
     </div>
   </section>
 </main>
