--- a/src/app/components/landing-navigation/landing-navigation.component.html
+++ b/src/app/components/landing-navigation/landing-navigation.component.html
@@ -60,7 +60,7 @@
 
     <!-- Mobile Devices Menu -->
     <ul
-      class="z-[999] text-center fixed top-0 flex flex-col flex-wrap items-center justify-center w-screen h-screen gap-7 mb-0 list-none transition-all -right-[120%] lg:hidden bg-custom-gray-800"
+      class="z-[999] text-center fixed top-0 flex flex-col flex-wrap items-center justify-center w-screen h-screen gap-7 mb-0 list-none transition-all -right-[120%] bg-custom-gray-800"
       id="mobile-menu"
     >
       <!-- Burger Close Icon -->
