--- a/src/app/layout/landing-navigation/landing-navigation.component.html
+++ b/src/app/layout/landing-navigation/landing-navigation.component.html
@@ -104,61 +104,26 @@
           <asl-google-signin-button type="standard"> </asl-google-signin-button>
         </li>
         <li class="mb-0 text-[25px]">
-          <a href="" class="transition hover:text-custom-green">Home</a>
-        </li>
-        <li class="relative mb-0 group parent-menu" aria-expanded="false">
           <a
-            class="cursor-pointer transition hover:text-custom-green text-[25px]"
-            >Products</a
+            routerLink="/c4c/authoring"
+            class="transition hover:text-custom-green"
+            >Authoring Tool</a
           >
-          <ul
-            class="flex flex-col gap-2 py-0 mb-0 overflow-hidden list-none transition-all opacity-0 sub-menu max-h-0"
-          >
-            <li class="mb-0">
-              <a href="" class="transition hover:text-custom-green">Number 1</a>
-            </li>
-            <li class="mb-0">
-              <a href="" class="transition hover:text-custom-green">Number 2</a>
-            </li>
-            <li class="mb-0">
-              <a href="" class="transition hover:text-custom-green">Number 3</a>
-            </li>
-          </ul>
         </li>
-        <li class="mb-0">
-          <a href="" class="transition hover:text-custom-green text-[25px]"
-            >Tools</a
+        <li class="mb-0 text-[25px]">
+          <a
+            routerLink="/c4c/learning"
+            class="transition hover:text-custom-green"
+            >Javascript + Python</a
+          >
+        </li>
+        <li class="mb-0 text-[25px]">
+          <a routerLink="/c4c/plans" class="transition hover:text-custom-green"
+            >Plans</a
           >
         </li>
         <li class="mb-0">
-          <a href="" class="button button-outline button-video group">
-            <div
-              class="absolute inset-0 -z-[10] invisible opacity-0 transition-all group-hover:visible group-hover:opacity-100"
-            >
-              <div class="relative h-full overflow-hidden">
-                <video
-                  class="absolute object-cover w-full h-full -z-[10]"
-                  muted
-                  playsinline
-                  autoplay
-                  loop
-                >
-                  <source src="/assets/videos/button.mp4" type="video/mp4" />
-                </video>
-              </div>
-            </div>
-            Try the demo
-            <svg
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.40381 15.5987L7.06787 14.2862L12.3179 9.03619H0.903809V7.16119H12.3179L7.06787 1.91119L8.40381 0.598694L15.9038 8.09869L8.40381 15.5987Z"
-              />
-            </svg>
-          </a>
+          <app-button-video [text]="'Learn More'"></app-button-video>
         </li>
       </ul>
     </div>
