--- a/src/app/student/student-navigation/student-navigation.component.html
+++ b/src/app/student/student-navigation/student-navigation.component.html
@@ -86,6 +86,7 @@
 
     <!-- Mobile Devices Menu -->
     <ul
+      #mobileMenu
       class="z-[999] text-center fixed top-0 flex flex-col flex-wrap items-center justify-center w-screen h-screen gap-7 mb-0 list-none transition-all -right-[120%] lg:hidden bg-custom-gray-800"
       id="mobile-menu"
     >
@@ -144,7 +145,12 @@
       </li>
       <li class="relative mb-0 group parent-menu" aria-expanded="false">
         <a class="cursor-pointer">
-          <img class="mx-auto" src="/assets/icons/user-account.svg" alt="" />
+          <img
+            style="width: 30px; height: 30px"
+            class="rounded-full object-cover"
+            src="{{ photoUrl$ | async }}"
+            alt="User Photo"
+          />
         </a>
         <ul
           class="flex flex-col gap-2 py-0 mb-0 overflow-hidden list-none transition-all opacity-0 sub-menu max-h-0"
