--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -21,7 +21,7 @@
     <div class="flex flex-wrap justify-between gap-2">
       <div class="flex flex-wrap items-center gap-2">
         <p class="mb-0">© 2023 C4C</p>
-        <ul class="inline-flex flex-wrap gap-5 mb-0 list-none">
+        <ul class="lg:inline-flex hidden flex-wrap gap-5 mb-0 list-none">
           <li class="mb-0">
             <a href="" class="transition hover:text-custom-green"
               >Legal Notices</a
